# bottleos

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  build.sh  clean.sh  headers.sh  iso.sh  limine.cfg  qemu.sh  run.sh  setup.sh
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: build.yml  clippy.yml  docs.yml  release.yml
boot/: boot.c
ci/: build.sh  toolchain.sh
docs/: Build.md  Doxyfile  Tests.md  generate-docs.sh  index.md
kernel/: .gitignore  Makefile  allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  proc.rs  serial.rs  vga_buffer.rs
kernel/arch/i386/: boot.S  boot.s  crti.S  crtn.S  idt.h  idt_impl.c  isrs.h  isrs.s  isrs_impl.c  linker.ld  make.config  tty.c  vga.h
kernel/include/kernel/: tty.h
kernel/kernel/: kernel.c
libc/arch/i386/: make.config
libc/include/: stdio.h  stdlib.h  string.h
libc/include/sys/: cdefs.h
libc/stdio/: printf.c  putchar.c  puts.c
libc/stdlib/: abort.c
libc/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strlen.c
src/: gdt.rs  lib.rs  main.rs  proc.rs  stivale2.rs
src/arch/x86_64/boot/: boot.asm  grub.cfg  linker.ld  multiboot.asm
src/devices/: serial.rs  vga_buffer.rs
src/memory/: allocator.rs  mod.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
