[package]
name = "bottleos"
description = "A bare-bones kernel created to teach myself OS internals"
version = "0.2.0"
homepage = "https://github.com/mayant15/bottleos"
documentation = "https://github.com/mayant15/bottleos"
repository = "https://github.com/mayant15/bottleos"
readme = "README.md"
authors = ["mayant15"]
license = "MIT"
edition = "2018"
exclude = [
    ".github/*"
]

[lib]
path = "kernel/lib.rs"

[[bin]]
name = "bottleos"
path = "kernel/main.rs"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { version = "0.9.11", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 120
